# dk_opt_v2

./: .gitignore  README.md  pyproject.toml  structure.txt
src/data/: lineup_structure.json  scoring.json
src/data/dk_entry_form/: dk_bulk_entry_2025_w4.xlsx
src/data/projection_data/: 2025_team.json  dvoa_2025.json
src/data/projection_data/boost_fade/: boost_fade_2025_w4.json
src/data/projection_data/defensive_ranks/: def_rank_2025_w3.json  def_rank_2025_w4.json
src/data/projection_data/dst/: dst_2025_w3.json  dst_2025_w3.xlsx  dst_2025_w4.json  dst_2025_w4.xlsx
src/data/projection_data/espn/: espn_2025_w2.json  espn_2025_w3.json  espn_2025_w4.json
src/data/projection_data/ownership/: 2025_w3.json  2025_w3.xlsx  2025_w4.json  2025_w4.xlsx
src/data/projection_data/situational/: week2.json  week3.json  week4.json
src/data/projection_data/vegas/: vegas_2025_w2.json  vegas_2025_w3.json  vegas_2025_w4.json
src/data/templates/: player_summary_template.xlsx
src/data/tracking_results/: 2025_final_betting.xlsx  2025_w2_final_betting.xlsx
src/optimizer/: __main__.py  analysis.py  cli.py  data_fetch.py  data_loader.py  engine.py  optimizer_engine.py  salary_ingestor_csv.py
src/output/optimizer_pool/: optimizer_pool_w4.json
src/output/projections/2025_w2/: baseline_2025_w2.json  footballguys_base_2025_w2.json  (+1 more)
src/scripts/: add_dk_id.py  assign_ids.py  fetch_espn.py  gen_dst.py  gen_ownership_json.py  generate_diehard_baselines.py  generate_footballguys.py  merge_projections.py  merge_salaries.py  monte_carlo_sims.py  monte_carlo_sims_bu.py  optimize.py  run_optimizer.py  salary_analysis.py  verify_dk_id.py  verify_pool.py
(+18 files in other folders)
